# bacon2

./: .gitmodules  CMakeLists.txt  README.md  config.cpp  core.cpp  hog.template.html  leaderboard.css  main.cpp  session.cpp  setup.cmake.py  setup.py  strategy.cpp  test.cpp  util.cpp
bacon/: __init__.py  dice.py  hog.py  html.py  io.py  ok.py
include/: config.hpp  core.hpp  session.hpp  strategy.hpp  util.hpp
